--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarKey">
                 <ul class="navbar-nav ml-auto text-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="about.html">About</a>
@@ -42,16 +42,16 @@
                     </li>
                 </ul>
             </div>
-            </div>
+        </div>
     </nav>
 
-    <!-- Section Progressive-bar -->
+    <!-- *Section Progressive-bar -->
     <!-- <span class="progress-container fixed-top">
         <div class="progress-bar" id="myBar"></div>
     </span>
      -->
 
-    <!-- Section Page-title -->
+    <!-- *Section Page-title -->
     <!-- <header class="position-relative py-5 jarallax" data-jarallax='{ "speed":0.6 }' style="background-image: url('https://images.unsplash.com/photo-1480796927426-f609979314bd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');">
         <div class="container">
             <div class="row">
@@ -60,9 +60,9 @@
                 </div>
             </div>
         </div>
-    </header>
-     -->
-    <!-- Section TODO -->
+    </header> -->
+
+    <!-- *Section TODO -->
     <!-- <section class="container py-5">
         <div class="row">
             <div class="col-lg-6 py-3 p-lg-0">
@@ -80,14 +80,15 @@
         </div>
     </section> -->
 
-    <!-- Section Timeline -->
-    <Section class="page-title jarallax" data-jarallax='{ "speed":0.6 }'  style="background-image: url('https://lh3.googleusercontent.com/d6DZxvFuYJC7hDdUg5SBmDpFAC58hH8ezSBT2Kt1-dtIMsodruR-AN_ulxY6lVShii4bw32RHOkSEBWr6f5oIReH5GdrsZifM1tRYUW2fgqaJ4lPgV94LqNHh-aViRDgUz--nMSzyi-hJTQwioOSya-CCKPCdPo3ongw-tK4Ab3zVpKz5Z8Az5E5mmUQEkPYTiZFijb3JRgbLu7EG93HUgsIN85GADGhnirlIukmxQxoJYaAYu-O-771I_pQcrgp9BOaOaQwD8cC5s8uRtVM2tWkGOMBdS9BxgVSdlzLrsgOTdLQnrB5r7dKfTgDzcI2LLEwPF-Ltr-IGQOmzfps_9yFd1uto_BV5cgW4uaBQjqitWIxxuqXjz_Rsg_MxoKbldc8lum_zGvagV0eO1beYzlPfHXM7av3aAZWcf5JVDTa75FufiK-HjiFzrzV6bU7FPl0t5shBpdpmOCR9v3xkKzuYit7RBhZGimPpYXKlnfB--qsdie-Nsz1G4hJJpp_xRyWdsqFFbTGhX-Dsisbezh1QeVqjp2E5qyi250z2pZVj4m1oWIA8cte7HtwFNag-wTPKOOdxiYhs6VaSmM1hHgLWkIbXfdUQIMLBpl1ldmqVZeNoV6ZINQE4Sdd0_teRIadrq2Djk_BILCc2FmlTW3G0JkcRgRzn4Lf65Ih-e01smdyZHgLKOY=w1417-h944-no');">
+    <!-- *Section Timeline -->
+    <Section class="page-title jarallax" data-jarallax='{ "speed":0.6 }'
+        style="background-image: url('https://lh3.googleusercontent.com/d6DZxvFuYJC7hDdUg5SBmDpFAC58hH8ezSBT2Kt1-dtIMsodruR-AN_ulxY6lVShii4bw32RHOkSEBWr6f5oIReH5GdrsZifM1tRYUW2fgqaJ4lPgV94LqNHh-aViRDgUz--nMSzyi-hJTQwioOSya-CCKPCdPo3ongw-tK4Ab3zVpKz5Z8Az5E5mmUQEkPYTiZFijb3JRgbLu7EG93HUgsIN85GADGhnirlIukmxQxoJYaAYu-O-771I_pQcrgp9BOaOaQwD8cC5s8uRtVM2tWkGOMBdS9BxgVSdlzLrsgOTdLQnrB5r7dKfTgDzcI2LLEwPF-Ltr-IGQOmzfps_9yFd1uto_BV5cgW4uaBQjqitWIxxuqXjz_Rsg_MxoKbldc8lum_zGvagV0eO1beYzlPfHXM7av3aAZWcf5JVDTa75FufiK-HjiFzrzV6bU7FPl0t5shBpdpmOCR9v3xkKzuYit7RBhZGimPpYXKlnfB--qsdie-Nsz1G4hJJpp_xRyWdsqFFbTGhX-Dsisbezh1QeVqjp2E5qyi250z2pZVj4m1oWIA8cte7HtwFNag-wTPKOOdxiYhs6VaSmM1hHgLWkIbXfdUQIMLBpl1ldmqVZeNoV6ZINQE4Sdd0_teRIadrq2Djk_BILCc2FmlTW3G0JkcRgRzn4Lf65Ih-e01smdyZHgLKOY=w1417-h944-no');">
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
                     <img src="assets/image/my.png" class="img-fluid" width="200" alt="">
-                    <h1 class="display-4 font-weight-bold">About me<h1>
-                    <p class="lead">My name Teerawat Thammaro</p>
+                    <h1 class="display-4 font-weight-bold">Timeline About us<h1>
+                            <p class="lead">Name: Mr.Teerawat Thammaro</p>
                 </div>
             </div>
         </div>
@@ -99,11 +100,11 @@
                 <ul class="timeline">
                     <li>
                         <div class="timeline-badge">
-                            <p class="text-info">1993</p>
+                            <p class="text-info">2010</p>
                         </div>
                         <div class="timeline-card">
-                            <h5>Age</h5>
-                            <p class="text-muted">26</p>
+                            <h5>Saengthong Vittaya School</h5>
+                            <p class="text-muted"></p>
                         </div>
                     </li>
                     <li class="inverted">
@@ -113,7 +114,7 @@
                         <div class="timeline-card">
                             <h5>Prince of Songkla University, Hat Yai</h5>
                             <p class="text-muted">Bachelor of Business Administration</p>
-                            <p class="text-muted">Information System</p>
+                            <p class="text-muted">Major: Information System</p>
                         </div>
                     </li>
                     <li>
@@ -125,13 +126,50 @@
                             <p class="text-muted">Trainee</p>
                         </div>
                     </li>
+                    <li class="inverted">
+                        <div class="timeline-badge">
+                            <p class="text-info">Oct 2016-2019</p>
+                        </div>
+                        <div class="timeline-card">
+                            <h5>PPP Pattanasuvarnabhumi.co.ltd</h5>
+                            <p class="text-muted">Bachelor of Business Administration</p>
+                        </div>
+                    </li>
                 </ul>
 
             </div>
         </div>
     </section>
 
-    <!-- Section Footer -->
+    <!-- *Section Timeline 2-->
+    <Section class="page-title jarallax" data-jarallax='{ "speed":0.6 }'
+        style="background-image: url('https://lh3.googleusercontent.com/d6DZxvFuYJC7hDdUg5SBmDpFAC58hH8ezSBT2Kt1-dtIMsodruR-AN_ulxY6lVShii4bw32RHOkSEBWr6f5oIReH5GdrsZifM1tRYUW2fgqaJ4lPgV94LqNHh-aViRDgUz--nMSzyi-hJTQwioOSya-CCKPCdPo3ongw-tK4Ab3zVpKz5Z8Az5E5mmUQEkPYTiZFijb3JRgbLu7EG93HUgsIN85GADGhnirlIukmxQxoJYaAYu-O-771I_pQcrgp9BOaOaQwD8cC5s8uRtVM2tWkGOMBdS9BxgVSdlzLrsgOTdLQnrB5r7dKfTgDzcI2LLEwPF-Ltr-IGQOmzfps_9yFd1uto_BV5cgW4uaBQjqitWIxxuqXjz_Rsg_MxoKbldc8lum_zGvagV0eO1beYzlPfHXM7av3aAZWcf5JVDTa75FufiK-HjiFzrzV6bU7FPl0t5shBpdpmOCR9v3xkKzuYit7RBhZGimPpYXKlnfB--qsdie-Nsz1G4hJJpp_xRyWdsqFFbTGhX-Dsisbezh1QeVqjp2E5qyi250z2pZVj4m1oWIA8cte7HtwFNag-wTPKOOdxiYhs6VaSmM1hHgLWkIbXfdUQIMLBpl1ldmqVZeNoV6ZINQE4Sdd0_teRIadrq2Djk_BILCc2FmlTW3G0JkcRgRzn4Lf65Ih-e01smdyZHgLKOY=w1417-h944-no');">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <!-- <img src="assets/image/my.png" class="img-fluid" width="200" alt=""> -->
+                    <h1 class="display-4 font-weight-bold">Timeline About us<h1>
+                            <h2>Name: Mr.Teerawat Thammaro</h2>
+                            <div class="star-rating">
+                                <span>☆</span>
+                                <span>☆</span>
+                                <span>☆</span>
+                                <span>☆</span>
+                                <span>☆</span>
+                            <div class="star-current" style=" width: 50%">
+                                    <span>★</span>
+                                    <span>★</span>
+                                    <span>★</span>
+                                    <span>★</span>
+                                    <span>★</span>
+                                </div>
+                            </div>
+                </div>
+            </div>
+        </div>
+    </Section>
+
+    <!-- *Section Footer -->
     <footer class="semi-footer p-5 text-center text-md-left">
         <div class="row">
             <div class="col-md-4">
@@ -143,7 +181,7 @@
                 <p style="color: #fff;">
                     <i class="fas fa-mobile-alt"></i> Tel: +66 85-689-3911 <br>
                     <i class="fas fa-inbox"></i> Email: teerawat.th@outlook.com <br>
-                    <i class="far fa-address-card"></i> Address: 41/496 st.Nawamin111 Bangkok
+                    <i class="far fa-address-card"></i> Address: 41/496 st.Nawamin111 Nawamin Bangkok 10230
                 </p>
                 <a href="http://facebook.com" target="blank">
                     <i class="fab fa-facebook fa-2x"></i>
@@ -191,8 +229,8 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/jarallax/dist/jarallax.min.js"></script>
     <script>
-        // When the user scrolls the page, execute myFunction 
-        window.onscroll = function () { 
+        //* When the user scrolls the page, execute myFunction 
+        window.onscroll = function () {
             myFunction()
         };
         function myFunction() {
@@ -205,5 +243,3 @@
 </body>
 
 </html>
-
-
