--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="carousel-img"
-                    style="background-image: url('https://images.unsplash.com/photo-1496411091121-3c8156f08cac?ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80');">
+                    style="background-image: url('https://images.unsplash.com/photo-1531760538759-603d65c701e1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');">
                     <div class="carousel-caption">
                         <h1 class="display-4 ">My Profile</h1>
                         <p class="lead">ผลงานของฉัน</p>
@@ -65,7 +65,7 @@
             </div>
             <div class="carousel-item">
                 <div class="carousel-img"
-                    style="background-image: url('https://images.unsplash.com/photo-1504672281656-e4981d70414b?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80');">
+                    style="background-image: url('https://images.unsplash.com/photo-1531760538759-603d65c701e1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');">
                     <div class="carousel-caption">
                         <h1 class="display-4">Database</h1>
                         <p class="lead">SQL/MongoDB/Postman/Express</p>
@@ -75,7 +75,7 @@
             </div>
             <div class="carousel-item">
                 <div class="carousel-img"
-                    style="background-image: url('https://images.unsplash.com/photo-1496411091121-3c8156f08cac?ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80');">
+                    style="background-image: url('https://images.unsplash.com/photo-1520531158340-44015069e78e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2038&q=80');">
                     <div class="carousel-caption">
                         <h1 class="display-4">Computer Languages</h1>
                         <p class="lead">HTML5/CSS3/Javascript ES6</p>
