--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
             <div class="row">
                 <div class="col-12 text-center">
                     <img src="assets/image/my.png" class="img-fluid" width="200" alt="">
-                    <h1 class="display-4 font-weight-bold">Timeline About us<h1>
+                    <h1 class="display-4 font-weight-bold">About us<h1>
                             <p class="lead">Name: Mr.Teerawat Thammaro</p>
                 </div>
             </div>
@@ -156,7 +156,7 @@
                                 <span>☆</span>
                                 <span>☆</span>
                                 <span>☆</span>
-                            <div class="star-current" style=" width: 50%">
+                                <div class="star-current" style=" width: 50%">
                                     <span>★</span>
                                     <span>★</span>
                                     <span>★</span>
@@ -197,10 +197,10 @@
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#">Link</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
@@ -228,6 +228,7 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/jarallax/dist/jarallax.min.js"></script>
+
     <script>
         //* When the user scrolls the page, execute myFunction 
         window.onscroll = function () {
