--- a/index.html
+++ b/index.html
@@ -156,6 +156,57 @@
                     </div>
                 </div>
             </section>
+
+            <section class="col-12 col-sm-6 col-md-4 p-2">
+                <div class="card h-100">
+                    <a class="warpper-card-img">
+                        <img src="https://images.unsplash.com/photo-1532456745301-b2c645d8b80d?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+                            class="card-img-top" alt="...">
+                    </a>
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                    <div>
+                        <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
+                    </div>
+                </div>
+            </section>
+
+            <section class="col-12 col-sm-6 col-md-4 p-2">
+                <div class="card h-100">
+                    <a class="warpper-card-img">
+                        <img src="https://images.unsplash.com/photo-1532456745301-b2c645d8b80d?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+                            class="card-img-top" alt="...">
+                    </a>
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                    <div>
+                        <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
+                    </div>
+                </div>
+            </section>
+
+            <section class="col-12 col-sm-6 col-md-4 p-2">
+                <div class="card h-100">
+                    <a class="warpper-card-img">
+                        <img src="https://images.unsplash.com/photo-1532456745301-b2c645d8b80d?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+                            class="card-img-top" alt="...">
+                    </a>
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                    <div>
+                        <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
+                    </div>
+                </div>
+            </section>
         </div>
     </section>
     <!-- Section Footer -->
@@ -165,12 +216,12 @@
                 <a class="navbar-brand" style="color: #fff;" href="#">
                     <img src="/assets/image/icons8-github-96.png" width="35" height="35"
                         class="d-inline-block align-top" alt="">
-                    My Profile
+                    My contact
                 </a>
                 <p style="color: #fff;">
                     <i class="fas fa-mobile-alt"></i> Tel.+66 85-689-3911 <br>
                     <i class="fas fa-inbox"></i> Email: teerawat.th@outlook.com <br>
-                    <i class="far fa-address-card"></i> Lorem ipsum dolor sit amet.
+                    <!-- <i class="far fa-address-card"></i>  Address: 41/496 st.Nawamin111 Nawamin Bangkok 10230 -->
                 </p>
                 <a href="http://facebook.com" target="blank">
                     <i class="fab fa-facebook fa-2x"></i>
