--- a/blog.html
+++ b/blog.html
@@ -9,17 +9,17 @@
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <link href="https://fonts.googleapis.com/css?family=Chonburi&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>My Profile-Teerawat</title>
+    <title>Blog</title>
 </head>
 
 <body>
-    <!-- section Navbar -->
+    <!-- Section Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-alpha">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <img src="/assets/image/icons8-bootstrap-144.png" width="35" height="35"
                     class="d-inline-block align-top" alt="">
-                My Profile
+                My profile
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarKey"
                 aria-controls="navbarKey" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,83 +28,54 @@
 
             <div class="collapse navbar-collapse" id="navbarKey">
                 <ul class="navbar-nav ml-auto text-center">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span> </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Blog</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="blog.html">Blog </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
                     </li>
                 </ul>
             </div>
-            </div>
+        </div>
     </nav>
 
-    <!-- Section Progressive-bar -->
+    <!-- *Section Progressive-bar -->
     <span class="progress-container fixed-top">
         <div class="progress-bar" id="myBar"></div>
     </span>
 
-    <!-- Section Carousel -->
-    <section id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <div class="carousel-img"
-                    style="background-image: url('https://images.unsplash.com/photo-1531760538759-603d65c701e1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');">
-                    <div class="carousel-caption">
-                        <h1 class="display-4 ">My Profile</h1>
-                        <p class="lead">ผลงานของฉัน</p>
-                    </div>
-                    <div class="blackscreen"></div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="carousel-img"
-                    style="background-image: url('https://images.unsplash.com/photo-1531760538759-603d65c701e1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');">
-                    <div class="carousel-caption">
-                        <h1 class="display-4">Database</h1>
-                        <p class="lead">SQL/MongoDB/Postman/Express</p>
-                    </div>
-                    <div class="blackscreen"></div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="carousel-img"
-                    style="background-image: url('https://images.unsplash.com/photo-1520531158340-44015069e78e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2038&q=80');">
-                    <div class="carousel-caption">
-                        <h1 class="display-4">Computer Languages</h1>
-                        <p class="lead">HTML5/CSS3/Javascript ES6</p>
-                    </div>
-                    <div class="blackscreen"></div>
-                </div>
-            </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </section>
 
-    <!-- Section Jumbotron -->
-    <section class="jumbotron jumbotron-fluid text-center">
+    <!-- *Section Page-title -->
+    <header class="position-relative py-5 jarallax" data-jarallax='{ "speed":0.6 }'
+        style="background-image: url('https://images.unsplash.com/photo-1480796927426-f609979314bd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');">
         <div class="container">
-            <h1 class="border-short-bottom">Mr.Teerawat Thammaro</h1>
-            <p class="lead">Position Front-end Developer</p>
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h1 class="display-4 font-weight-bold" style="color: antiquewhite;">Blog</h1>
+                    <p class="lead"> "ประสบการณ์ และข้อมูล จากผู้ใช้งาน" </p>
+                </div>
+            </div>
         </div>
-    </section>
+    </header>
 
-    <!-- Section Blog -->
-    <section class="container">
-        <h1 class="border-short-bottom text-center">Personal Detail</h1>
+    <!-- Section blog -->
+    <section class="container py-5">
+        <div class="row pb-4">
+            <div class="col-12 text-center">
+                <div class="btn-group-custom">
+                    <button class="btn btn-primary">All</button>
+                    <button class="btn btn-primary">Brief</button>
+                    <button class="btn btn-primary">Photography</button>
+                    <button class="btn btn-primary">Covid-19</button>
+                </div>
+            </div>
+        </div>
         <div class="row">
             <section class="col-12 col-sm-6 col-md-4 p-2">
                 <div class="card h-100">
@@ -118,7 +89,7 @@
                             the card's content.</p>
                     </div>
                     <div>
-                        <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
+                        <a href="#" class="btn btn-primary btn-block">Read more</a>
                     </div>
                 </div>
             </section>
@@ -135,7 +106,7 @@
                             the card's content.</p>
                     </div>
                     <div>
-                        <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
+                        <a href="#" class="btn btn-primary btn-block">Read more</a>
                     </div>
                 </div>
             </section>
@@ -152,7 +123,7 @@
                             the card's content.</p>
                     </div>
                     <div>
-                        <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
+                        <a href="#" class="btn btn-primary btn-block">Read more</a>
                     </div>
                 </div>
             </section>
@@ -169,7 +140,7 @@
                             the card's content.</p>
                     </div>
                     <div>
-                        <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
+                        <a href="#" class="btn btn-primary btn-block">Read more</a>
                     </div>
                 </div>
             </section>
@@ -186,7 +157,7 @@
                             the card's content.</p>
                     </div>
                     <div>
-                        <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
+                        <a href="#" class="btn btn-primary btn-block">Read more</a>
                     </div>
                 </div>
             </section>
@@ -203,25 +174,54 @@
                             the card's content.</p>
                     </div>
                     <div>
-                        <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
+                        <a href="#" class="btn btn-primary btn-block">Read more</a>
                     </div>
                 </div>
             </section>
         </div>
     </section>
-    <!-- Section Footer -->
+
+    <!-- *Section Blog-->
+    <Section class="page-title jarallax" data-jarallax='{ "speed":0.6 }'
+        style="background-image: url('https://lh3.googleusercontent.com/d6DZxvFuYJC7hDdUg5SBmDpFAC58hH8ezSBT2Kt1-dtIMsodruR-AN_ulxY6lVShii4bw32RHOkSEBWr6f5oIReH5GdrsZifM1tRYUW2fgqaJ4lPgV94LqNHh-aViRDgUz--nMSzyi-hJTQwioOSya-CCKPCdPo3ongw-tK4Ab3zVpKz5Z8Az5E5mmUQEkPYTiZFijb3JRgbLu7EG93HUgsIN85GADGhnirlIukmxQxoJYaAYu-O-771I_pQcrgp9BOaOaQwD8cC5s8uRtVM2tWkGOMBdS9BxgVSdlzLrsgOTdLQnrB5r7dKfTgDzcI2LLEwPF-Ltr-IGQOmzfps_9yFd1uto_BV5cgW4uaBQjqitWIxxuqXjz_Rsg_MxoKbldc8lum_zGvagV0eO1beYzlPfHXM7av3aAZWcf5JVDTa75FufiK-HjiFzrzV6bU7FPl0t5shBpdpmOCR9v3xkKzuYit7RBhZGimPpYXKlnfB--qsdie-Nsz1G4hJJpp_xRyWdsqFFbTGhX-Dsisbezh1QeVqjp2E5qyi250z2pZVj4m1oWIA8cte7HtwFNag-wTPKOOdxiYhs6VaSmM1hHgLWkIbXfdUQIMLBpl1ldmqVZeNoV6ZINQE4Sdd0_teRIadrq2Djk_BILCc2FmlTW3G0JkcRgRzn4Lf65Ih-e01smdyZHgLKOY=w1417-h944-no');">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <!-- <img src="assets/image/my.png" class="img-fluid" width="200" alt=""> -->
+                    <h1 class="display-4 font-weight-bold">About us<h1>
+                            <h2>Name: Mr.Teerawat Thammaro</h2>
+                            <div class="star-rating">
+                                <span>☆</span>
+                                <span>☆</span>
+                                <span>☆</span>
+                                <span>☆</span>
+                                <span>☆</span>
+                                <div class="star-current" style=" width: 50%">
+                                    <span>★</span>
+                                    <span>★</span>
+                                    <span>★</span>
+                                    <span>★</span>
+                                    <span>★</span>
+                                </div>
+                            </div>
+                </div>
+            </div>
+        </div>
+    </Section>
+
+    <!-- *Section Footer -->
     <footer class="semi-footer p-5 text-center text-md-left">
         <div class="row">
             <div class="col-md-4">
                 <a class="navbar-brand" style="color: #fff;" href="#">
                     <img src="/assets/image/icons8-github-96.png" width="35" height="35"
                         class="d-inline-block align-top" alt="">
-                    My contact
+                    My Profile
                 </a>
                 <p style="color: #fff;">
-                    <i class="fas fa-mobile-alt"></i> Tel.+66 85-689-3911 <br>
+                    <i class="fas fa-mobile-alt"></i> Tel: +66 85-689-3911 <br>
                     <i class="fas fa-inbox"></i> Email: teerawat.th@outlook.com <br>
-                    <!-- <i class="far fa-address-card"></i>  Address: 41/496 st.Nawamin111 Nawamin Bangkok 10230 -->
+                    <i class="far fa-address-card"></i> Address: 41/496 st.Nawamin111 Nawamin Bangkok 10230
                 </p>
                 <a href="http://facebook.com" target="blank">
                     <i class="fab fa-facebook fa-2x"></i>
@@ -234,13 +234,13 @@
                 <h4>Menu</h4>
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#">Home </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="blog.html">blog<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
@@ -250,14 +250,14 @@
 
             <div class="col-md-4">
                 <h4>Map</h4>
-                <iframe  id="map"
+                <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d484.313473187148!2d100.64210513865896!3d13.80851955783624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x311d6242a0405dfd%3A0x9fef0c99eea43120!2zMTPCsDQ4JzMwLjciTiAxMDDCsDM4JzMyLjIiRQ!5e0!3m2!1sth!2sth!4v1579595893930!5m2!1sth!2sth"
                     width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
             </div>
         </div>
     </footer>
     <footer class="footer">
-        <span> Copyright 2020
+        <span> Copyright2020
             <a href=""></a>
             By Admin
         </span>
@@ -267,9 +267,11 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="node_modules/jarallax/dist/jarallax.min.js"></script>
+
     <script>
-        // When the user scrolls the page, execute myFunction 
-        window.onscroll = function () { 
+        //* When the user scrolls the page, execute myFunction 
+        window.onscroll = function () {
             myFunction()
         };
         function myFunction() {
